tests/negative/exceptions/unreachable_catch/input.ci
void main() {
    try {
        assert(false, "boom");
    } catch (Exception e) {
        print(e.message + "\n");
    } catch (RuntimeException e) {
        print("never\n");
    }
}
